--- a/CNNCTC.ipynb
+++ b/CNNCTC.ipynb
@@ -906,6 +906,8 @@
    "source": [
     "from mindspore.ops import operations as P\n",
     "from mindspore.ops import composite as C\n",
+    "from mindspore import Parameter, ParameterTuple, context\n",
+    "from mindspore.context import ParallelMode\n",
     "#封装model与loss函数\n",
     "class WithLossCell(nn.Cell):\n",
     "\n",
